--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,8 @@ jobs:
         submodules: true
     - name: Get dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install libsdl2-2.0
-        sudo apt-get install libsdl2-dev
-        sudo apt-get install libsdl2-image-dev
-        sudo apt-get install libglew-dev
+        pip3 install conan
+        conan --version
     - name: Build
       run: |
         cmake .
