--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
       run: |
         pip3 install conan
         conan --version
+        sudo apt update
+        sudo apt install libgl-dev
     - name: Build
       run: |
         cmake .
