--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      CONAN_SYSREQUIRES_MODE: disabled
+    
     steps:
     - uses: actions/checkout@v1
       with: 
@@ -19,5 +18,6 @@ jobs:
 
     - name: Build
       run: |
+        export CONAN_SYSREQUIRES_MODE=disabled
         cmake .
         make Runtime
