Text rendering with Freetype (WIP)

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(assimp REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(sdl2_image REQUIRED)
 find_package(PhysX REQUIRED)
+find_package(Freetype REQUIRED)
 
 # Gather c++ files
 file(GLOB_RECURSE SRC_FILES 
@@ -17,6 +18,7 @@ include_directories (${SDL2_INCLUDE_DIRS})
 include_directories (${sdl2_image_INCLUDE_DIRS})
 include_directories (${assimp_INCLUDE_DIRS})
 include_directories (${PhysX_INCLUDE_DIRS})
+include_directories (${Freetype_INCLUDE_DIRS})
 include_directories ("../Core/Source")
 include_directories ("../Rendering/Source")
 include_directories ("../Networking/Source")
@@ -34,3 +36,4 @@ target_link_libraries(Engine Networking)
 target_link_libraries(Engine ${SDL2_LIBRARIES})
 target_link_libraries(Engine ${assimp_LIBRARIES})
 target_link_libraries(Engine ${PhysX_LIBRARIES})
+target_link_libraries(Engine ${Freetype_LIBRARIES})
