Load widgets from XML (WIP - simple test with ImageWidget only). Fixed a bug in WidgetTree::ReallocSubmesh. Added default depth stencil state for opaque and transparent objects (to make sure GUI and transparent meshes are rendered without depth write).

--- a/Samples/CMakeLists.txt
+++ b/Samples/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE SRC_FILES
 )
 
 set(SampleProject "game" CACHE STRING "Type of samples")
-set_property(CACHE SampleProject PROPERTY STRINGS game sockets core rendering gamenetwork rpc replication physics multiwindow)
+set_property(CACHE SampleProject PROPERTY STRINGS game sockets core rendering gamenetwork rpc replication physics multiwindow gui)
 
 if(SampleProject STREQUAL "core")
 	add_definitions(-DMING3D_TESTTYPE=1)
@@ -30,6 +30,8 @@ elseif(SampleProject STREQUAL "game")
 	add_definitions(-DMING3D_TESTTYPE=8)
 elseif(SampleProject STREQUAL "multiwindow")
 	add_definitions(-DMING3D_TESTTYPE=9)
+    elseif(SampleProject STREQUAL "gui")
+	add_definitions(-DMING3D_TESTTYPE=10)
 endif()
 
 include_directories (${SDL2_INCLUDE_DIRS})
@@ -39,6 +41,7 @@ include_directories ("../Engine/Source")
 include_directories ("../Networking/Source")
 include_directories ("../Rendering/Source")
 include_directories ("../Include/glm")
+include_directories ("../Include/tinyxml")
 
 add_executable(Samples ${SRC_FILES})
 
@@ -49,3 +52,7 @@ target_link_libraries(Samples Rendering)
 
 #Set working directory to the directory where "Resources" folder is located
 set_target_properties(Samples PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
+
+# Set preprocessor definition MING3D_ENGINE_SOURCE_DIR (relative to CMAKE_SOURCE_DIR)
+STRING(REGEX REPLACE "${CMAKE_SOURCE_DIR}/" "" SAMPLES_SOURCE_DIR_REL ${CMAKE_CURRENT_SOURCE_DIR})
+target_compile_definitions(Samples PRIVATE "MING3D_SAMPLES_SOURCE_DIR=\"${SAMPLES_SOURCE_DIR_REL}\"")
