--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -15,7 +15,7 @@ file(GLOB_RECURSE SRC_FILES
 
 include_directories ("Source")
 include_directories (${SDL2_INCLUDE_DIRS})
-include_directories (${sdl2_image_INCLUDE_DIRS})
+include_directories (${SDL2_image_INCLUDE_DIRS})
 include_directories (${assimp_INCLUDE_DIRS})
 include_directories (${PhysX_INCLUDE_DIRS})
 include_directories (${Freetype_INCLUDE_DIRS})
@@ -23,7 +23,6 @@ include_directories ("../Core/Source")
 include_directories ("../Rendering/Source")
 include_directories ("../Networking/Source")
 include_directories ("../Include/glm")
-
 add_library(Engine STATIC ${SRC_FILES})
 
 # Set preprocessor definition MING3D_ENGINE_SOURCE_DIR (relative to CMAKE_SOURCE_DIR)
@@ -34,6 +33,7 @@ target_link_libraries(Engine Rendering)
 target_link_libraries(Engine Core)
 target_link_libraries(Engine Networking)
 target_link_libraries(Engine ${SDL2_LIBRARIES})
+target_link_libraries(Engine ${SDL2_image_LIBRARIES})
 target_link_libraries(Engine ${assimp_LIBRARIES})
 target_link_libraries(Engine ${PhysX_LIBRARIES})
 target_link_libraries(Engine ${Freetype_LIBRARIES})
