--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Engine)
 
 find_package(assimp REQUIRED)
 find_package(SDL2 REQUIRED)
-find_package(sdl2_image REQUIRED)
+find_package(SDL2_image REQUIRED)
 find_package(PhysX REQUIRED)
 find_package(Freetype REQUIRED)
 
