--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -9,8 +9,8 @@ find_package(Freetype REQUIRED)
 
 # Gather c++ files
 file(GLOB_RECURSE SRC_FILES 
-	Source/*.cpp
-	Source/*.h
+    Source/*.cpp
+    Source/*.h
 )
 
 include_directories ("Source")
@@ -26,7 +26,11 @@ include_directories ("../Include/glm")
 
 add_library(Engine STATIC ${SRC_FILES})
 
-target_compile_options(Engine PRIVATE -Werror -Wall)
+if(MSVC)
+    target_compile_options(Engine PRIVATE /W4 /WX)
+else()
+    target_compile_options(Engine PRIVATE -Werror -Wall)
+endif()
 
 # Set preprocessor definition MING3D_ENGINE_SOURCE_DIR (relative to CMAKE_SOURCE_DIR)
 STRING(REGEX REPLACE "${CMAKE_SOURCE_DIR}/" "" ENGINE_SOURCE_DIR_REL ${CMAKE_CURRENT_SOURCE_DIR})
