--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -34,7 +34,7 @@ include_directories ("Include")
 add_library(Core STATIC ${SRC_FILES})
 
 if(MSVC)
-    target_compile_options(Core PRIVATE /W4 /WX)
+    target_compile_options(Core PRIVATE /W4 /WX /Za)
 else()
     target_compile_options(Core PRIVATE -Werror -Wall)
 endif()
